<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hiromisakurai.bookapp.AccountActivity"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar_account"
        android:layout_width="match_parent"
        android:title="@string/toolbar_account"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:title="@string/toolbar_account"
       >

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/linear_layout_marginLeft"
        android:layout_marginRight="@dimen/linear_layout_marginRight"
        android:layout_marginTop="@dimen/linear_layout_account_marginTop">

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_email" />

        <EditText
            android:id="@+id/AccountEmailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/passwordTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_password" />

        <EditText
            android:id="@+id/AccountPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/passwordConfirmTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_passwordConfirm" />

        <EditText
            android:id="@+id/AccountPasswordConfirmEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

    </LinearLayout>



</LinearLayout>
