<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/bookImage"
            android:layout_width="@dimen/form_image_width"
            android:layout_height="@dimen/form_image_height"
            android:layout_margin="@dimen/form_image_margin"
            android:background="@color/colorAccent" />

        <Button
            android:id="@+id/button_saveImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/form_button_marginStart"
            android:layout_toEndOf="@+id/bookImage"
            android:text="@string/button_setImage"
            android:textSize="@dimen/form_button_textSize" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/linear_layout_marginLeft"
        android:layout_marginRight="@dimen/linear_layout_marginRight">

    <TextView
        android:id="@+id/bookTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/book_title" />

    <EditText
        android:id="@+id/bookTitleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/bookPriceTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/book_price" />

    <EditText
        android:id="@+id/bookPriceEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/purchaseDateTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/purchase_date" />

    <EditText
        android:id="@+id/purchaseDateEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        android:focusable="false"/>

    </LinearLayout>

</LinearLayout>